--- a/index.html
+++ b/index.html
@@ -380,17 +380,17 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>desenvolvimento web</h3>
-                                <span>Youtube</span>
+                                <h3>To-do List</h3>
+                                <span>Projeto</span>
                             </div>
-                            <img src="assets/port-img4.png" alt="">
+                            <img src="assets/port-img4.jpg" alt="">
                         </div>
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>desenvolvimento web</h3>
-                                <img src="assets/port-img4.png" alt="">
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam possimus fugit reiciendis ipsum rem totam maxime magni ipsa modi! Ullam sequi, quos officia rem animi, odio ut quibusdam voluptates ipsam assumenda, cumque cum expedita dolorem?</p>
+                                <h3>To-do List</h3>
+                                <img src="assets/port-img4.jpg" alt="">
+                                <p>Esse é um projeto usado no dia a dia para organizar as tarefas. Foram usados conhecimentos em HTML, CSS e Javascript, além disso foi implementado um CRUD simples. <a href="page/to-do list/index.html">Clique aqui para ir até o projeto</a> </p>
                             </div>
                         </div>
                     </div>
