Novo projeto - Calculadora IMC

--- a/index.html
+++ b/index.html
@@ -362,17 +362,17 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Branding & Design</h3>
-                                <span>Youtube</span>
+                                <h3>Calculadora IMC</h3>
+                                <span>Projeto</span>
                             </div>
-                            <img src="assets/port-img3.png" alt="">
+                            <img src="assets/port-img3.jpg" alt="">
                         </div>
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>Branding & Design</h3>
-                                <img src="assets/port-img3.png" alt="">
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam possimus fugit reiciendis ipsum rem totam maxime magni ipsa modi! Ullam sequi, quos officia rem animi, odio ut quibusdam voluptates ipsam assumenda, cumque cum expedita dolorem?</p>
+                                <h3>Calculadora IMC</h3>
+                                <img src="assets/port-img3.jpg" alt="">
+                                <p>Essa é uma calculadora de IMC (Índice de massa corporal). Esse é um medidor internacional para indicar o peso ideal para cada tipo de pessoa com base na altura e peso. <a href="page/Calculadora IMC/index.html">Clique aqui para medir o seu IMC</a></p>
                             </div>
                         </div>
                     </div>
