--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Calculadora IMC</h3>
                                 <img src="assets/port-img3.jpg" alt="">
-                                <p>Essa é uma calculadora de IMC (Índice de massa corporal). Esse é um medidor internacional para indicar o peso ideal para cada tipo de pessoa com base na altura e peso. <a href="page/Calculadora IMC/index.html">Clique aqui para medir o seu IMC</a></p>
+                                <p>Essa é uma calculadora de IMC (Índice de massa corporal). Esse é um medidor internacional para indicar o peso ideal para cada tipo de pessoa com base na altura e peso. <a href="page/Imc/dist/index.html">Clique aqui para medir o seu IMC</a></p>
                             </div>
                         </div>
                     </div>
