Adicionando icones de skills

--- a/index.html
+++ b/index.html
@@ -125,40 +125,39 @@
                         <ul class="bars">
                             <li class="bar">
                                 <div class="info">
+                                    <span>Biblioteca & Frameworks</span>
+                                    <div class="icon_distance">
+                                        <img src="assets/next.svg" class="icon" alt="Next">
+                                        <img src="assets/react.svg" class="icon" alt="React">
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>Linguagem de programação</span>
+                                    <div class="icon_distance">
+                                        <img src="assets/javascript.svg" class="icon" alt="JavaScript">
+                                        <img src="assets/typescript.svg" class="icon" alt="typescript">
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
                                     <span>Design</span>
-                                    <span>95%</span>
+                                    <div class="icon_distance">
+                                        <img src="assets/css.svg" class="icon" alt="Css">
+                                        <img src="assets/Tailwind.svg" class="icon" alt="Tailwind">
+                                    </div>
                                 </div>
-                                <div class="line design"></div>
                             </li>
                             <li class="bar">
                                 <div class="info">
-                                    <span>CSS</span>
-                                    <span>85%</span>
+                                    <span>Linguagem de marcação</span>
+                                    <div class="icon_distance">
+                                        <img src="assets/html.svg" class="icon" alt="Html">
+                                    </div>
                                 </div>
-                                <div class="line css"></div>
                             </li>
-                            <li class="bar">
-                                <div class="info">
-                                    <span>HTML</span>
-                                    <span>80%</span>
-                                </div>
-                                <div class="line html"></div>
-                            </li>
-                            <li class="bar">
-                                <div class="info">
-                                    <span>JavaScript</span>
-                                    <span>65%</span>
-                                </div>
-                                <div class="line javascript"></div>
-                            </li>
-                            <li class="bar">
-                                <div class="info">
-                                    <span>React</span>
-                                    <span>65%</span>
-                                </div>
-                                <div class="line react"></div>
-                            </li>
-                        </ul>
                     </div>
                     <div class="education">
                         <h4><label>Habilidades</label></h4>
