Adicionando um 'em breve' no projeto 1

--- a/index.html
+++ b/index.html
@@ -325,17 +325,17 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Web Design</h3>
-                                <span>Youtube</span>
+                                <h3>Em contrução</h3>
+                                <span>Projeto</span>
                             </div>
-                            <img src="assets/port-img1.png" alt="">
+                            <img src="assets/port-img1.jpg" alt="">
                         </div>
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>Web Design</h3>
-                                <img src="assets/port-img1.png" alt="">
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam possimus fugit reiciendis ipsum rem totam maxime magni ipsa modi! Ullam sequi, quos officia rem animi, odio ut quibusdam voluptates ipsam assumenda, cumque cum expedita dolorem?</p>
+                                <h3>Em contrução</h3>
+                                <img src="assets/port-img1.jpg" alt="">
+                                <p>Em breve E-commerce de moda Eyewear. Uma marca de óculos de tecido inovadora no Brasil!</p>
                             </div>
                         </div>
                     </div>
