corrigindo erro de Gramática

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </li>
                             <li class="item">
                                 <span class="year"></span>
-                                <p><span>Aberto a novas ideias</span> - Busco absover o máximo de ideias de outras pessoas para que eu forme um pensamento sobre algo, isso me ajuda a evitar erros que outras pessoas já cometeram.</p>
+                                <p><span>Aberto a novas ideias</span> - Busco absorver o máximo de ideias de outras pessoas para que eu forme um pensamento sobre algo, isso me ajuda a evitar erros que outras pessoas já cometeram.</p>
                             </li>
                             <li class="item">
                                 <span class="year"></span>
