--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Marketing Innovation Conference</h3>
                                 <img src="assets/port-img1.jpg" alt="">
-                                <p>Landing Page criada em React com Tailwindcss <a href="page/marketingInovation/dist/index.html">Clique aqui</a></p>
+                                <p>Landing Page criada em React com Tailwindcss <a href="">Clique aqui</a></p>
                             </div>
                         </div>
                     </div>
@@ -313,7 +313,7 @@
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Calculadora de investimento</h3>
                                 <img src="assets/investmentApp.png" alt="">
-                                <p>Essa é uma calculadora de investimento usando HTML, CSS, Javascript e Tailwindcss. Com esse app conseguimos calcular de acordo com nosso perfil a quantidade de renda que podemos obeter a partir dos investimentos. <a href="page/SimuladorInvestimento/index.html">Clique aqui para acessar</a></p>
+                                <p>Essa é uma calculadora de investimento usando HTML, CSS, Javascript e Tailwindcss. Com esse app conseguimos calcular de acordo com nosso perfil a quantidade de renda que podemos obeter a partir dos investimentos. <a href="">Clique aqui para acessar</a></p>
                             </div>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Calculadora IMC</h3>
                                 <img src="assets/port-img3.jpg" alt="">
-                                <p>Essa é uma calculadora de IMC (Índice de massa corporal). Esse é um medidor internacional para indicar o peso ideal para cada tipo de pessoa com base na altura e peso. <a href="page/imc/index.html">Clique aqui para medir o seu IMC</a></p>
+                                <p>Essa é uma calculadora de IMC (Índice de massa corporal). Esse é um medidor internacional para indicar o peso ideal para cada tipo de pessoa com base na altura e peso. <a href="Projetos/Imc/dist/index.html">Clique aqui para medir o seu IMC</a></p>
                             </div>
                         </div>
                     </div>
@@ -349,7 +349,7 @@
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>To-do List</h3>
                                 <img src="assets/port-img4.jpg" alt="">
-                                <p>Esse é um projeto usado no dia a dia para organizar as tarefas. Foram usados conhecimentos em HTML, CSS e Javascript, além disso foi implementado um CRUD simples. <a href="page/to-do list/index.html">Clique aqui para ir até o projeto</a> </p>
+                                <p>Esse é um projeto usado no dia a dia para organizar as tarefas. Foram usados conhecimentos em HTML, CSS e Javascript, além disso foi implementado um CRUD simples. <a href="">Clique aqui para ir até o projeto</a> </p>
                             </div>
                         </div>
                     </div>
